# todo-chatbot-phase3

./: .gitignore  API.md  CLAUDE.md  QUICKSTART.md  README.md  check_backend.py  import.py  run_server.py  test_mcp_access_control.py
.claude/: settings.local.json
backend/: .coverage  .ruff.toml  alembic.ini  create_tables.py  debug_server.py  final_test.py  minimal_server.py  pyproject.toml  pytest.ini  run_mcp_server.py  simple_server.py  test_ai_direct.py  test_ai_manager.py  test_ai_with_tools.py  test_auth_endpoints.py  test_connection.py  test_full_chat_flow.py  test_openai.py  test_openrouter.py  test_system_env.py  test_task_api.py  test_task_api_simple.py
backend/alembic/: env.py
backend/src/: database.py  logging_config.py  main.py  settings.py
backend/src/api/: __init__.py  auth.py  chat.py  tasks.py
backend/src/config/: ai_config.py
backend/src/mcp_server/: __main__.py  server.py  tools.py
backend/src/middleware/: auth.py  security.py  validation.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/schemas/: chat.py  task.py  user.py
backend/src/services/: ai_agent_manager.py  ai_agent_service.py  chat_service.py  conversation_service.py  message_service.py  task_service.py  user_service.py
backend/tests/: test_basic_functionality.py
backend/tests/contract/: test_contract_auth.py  test_contract_isolation.py  test_contract_tasks.py
backend/tests/integration/: test_auth.py  test_auth_api.py  test_isolation.py  test_polish.py  test_tasks.py  test_tasks_api.py
backend/tests/unit/: test_task_service.py  test_user_service.py  test_validation_middleware.py
frontend/: .eslintrc.json  jest.config.js  package-lock.json  package.json  (+1 more)
(+130 files in other folders)
